<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".modules.user_registration.ui.RegisterUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_gray">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            app:popupTheme="@style/Theme.TPFFM.PopupOverlay" />

        <TextView
            android:id="@+id/title"
            style="@style/subtitle"
            android:text="@string/register_user"
            android:textSize="@dimen/_18sp"
            app:layout_constraintBottom_toBottomOf="@id/toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/toolbar" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_20dp"
            app:cardCornerRadius="@dimen/_8dp"
            app:cardElevation="@dimen/_4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintWidth_percent="0.9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.9">

                    <TextView
                        android:id="@+id/ui_name_user"
                        style="@style/commonText18"
                        android:layout_marginTop="@dimen/_20sp"
                        android:text="@string/name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/ui_name_user_input"
                        style="@style/commonFieldRounded"
                        android:autofillHints=""
                        android:gravity="top"
                        android:lines="1"
                        android:maxLength="30"
                        android:padding="@dimen/_12dp"
                        android:inputType="text"
                        android:hint="@string/name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_name_user" />

                    <TextView
                        android:id="@+id/ui_last_name_planet"
                        style="@style/commonText18"
                        android:layout_marginTop="@dimen/_20dp"
                        android:text="@string/last_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_name_user_input" />

                    <EditText
                        android:id="@+id/ui_last_name_input"
                        style="@style/commonFieldRounded"
                        android:autofillHints=""
                        android:gravity="top"
                        android:lines="1"
                        android:maxLength="30"
                        android:padding="@dimen/_12dp"
                        android:inputType="text"
                        android:hint="@string/last_name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_last_name_planet" />

                    <TextView
                        android:id="@+id/ui_mother_last_name_planet"
                        style="@style/commonText18"
                        android:layout_marginTop="@dimen/_20dp"
                        android:text="@string/mother_last_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_last_name_input" />

                    <EditText
                        android:id="@+id/ui_mother_last_name_input"
                        style="@style/commonFieldRounded"
                        android:autofillHints=""
                        android:gravity="top"
                        android:lines="1"
                        android:maxLength="30"
                        android:padding="@dimen/_12dp"
                        android:inputType="text"
                        android:hint="@string/mother_last_name"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_mother_last_name_planet" />

                    <TextView
                        android:id="@+id/ui_country"
                        style="@style/commonText18"
                        android:layout_marginTop="@dimen/_20dp"
                        android:text="@string/country"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_mother_last_name_input" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/ui_country_spinner"
                        android:layout_width="@dimen/_0dp"
                        android:layout_height="@dimen/_48dp"
                        android:entries="@array/country"
                        android:background="@drawable/background_gray_rounded"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_country" />

                    <TextView
                        android:id="@+id/ui_birthday"
                        style="@style/commonText18"
                        android:layout_marginTop="@dimen/_20dp"
                        android:text="@string/birthday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_country_spinner" />

                    <TextView
                        android:id="@+id/ui_birthday_input"
                        style="@style/commonFieldRounded"
                        android:autofillHints=""
                        android:gravity="top"
                        android:lines="1"
                        android:maxLength="30"
                        android:focusable="true"
                        android:clickable="true"
                        android:padding="@dimen/_12dp"
                        android:hint="@string/birthday_format"
                        android:singleLine="true"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/ui_birthday" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/action_register_user"
            style="@style/PurpleRoundedButton"
            android:text="@string/register_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.95" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>